--- a/beta_version/index.html
+++ b/beta_version/index.html
@@ -50,10 +50,10 @@
             <form id="calculator_input_form">
                 
                 <label for="purchase_price">Purchase Price (R)</label><br>
-                <input type="number" min="0" id="purchase_price" name="purchase_price" onkeypress="return isNumber(event)"  value="500 000"><br>
+                <input type="number" min="0" id="purchase_price" name="purchase_price" onkeypress="return isNumber(event)"  value="500000"><br>
 
                 <label for="deposit">Deposit (R)</label><br>
-               <input type="number"  min="0" id="deposit" name="Deposit" onkeypress="return isNumber(event)" value="50 000"/><br>
+               <input type="number"  min="0" id="deposit" name="Deposit" onkeypress="return isNumber(event)" value="50000"/><br>
 
                 <label for="interest_rate">Interest Rate</label><br>
                 <input type="number" min="0" id="interest_rate" name="interest_rate" onkeypress="return isNumber(event)" style="width: 95px;" value="11.75"><span>%</span><br>
