Add transfer duty

--- a/beta_version/index.html
+++ b/beta_version/index.html
@@ -46,7 +46,7 @@
             <form id="calculator_input_form">
                 
                 <label for="purchase_price">Purchase Price</label><br>
-                <input type="number" min="0" id="purchase_price" name="purchase_price" onkeypress="return isNumber(event)"  value="500000" oninput="formatInput(this)"><br>
+                <input type="number" min="0" id="purchase_price" name="purchase_price" onkeypress="return isNumber(event)"  value="500000"><br>
 
                 <label for="deposit">Deposit (Optional)</label><br>
                 <input type="number"  min="0" id="deposit" name="Deposit" onkeypress="return isNumber(event)" value="50000"/><br>
