Move files from beta_version folder to root folder

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <label for="deposit">Deposit (Optional)</label><br>
                 <input type="number"  min="0" id="deposit" name="Deposit" onkeypress="return isNumber(event)" value="50000"/><br>
 
-                <label for="interest_rate">Interest Rate</label><br>
+                <label for="interest_rate">Interest Rate (prime)</label><br>
                 <input type="number" min="0" id="interest_rate" name="interest_rate" onkeypress="return isDecimalNumber(event)" style="width: 95px;" value="11.75"><span>%</span><br>
 
                 <label for="number_of_years">Number of years</label><br>
