ADD See More Projects button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     /*TODO 
     * Automatically separate large numbers with comma or point when typed in  */
+    * Don't judge, I using <br> sometimes for vertical spacing :D
 
 -->
 <html>
@@ -111,6 +112,15 @@
         </div>
 
     </div>
+    <br>
+
+    <!-- SEE MORE PROJECTS-->
+    <div>
+        <button class="see_more_btn" onclick="window.open('https://genialingele.github.io/')">SEE MORE PROJECTS</button>
+    </div>
+
+    <br>
+
 <div id="copyright" class="copyright"> 
  <p><em>Copyright of GENIAL INGELE (2023). This calculator is merely an estimation of what your bond (as a natural person) would cost and the other costs associated with it.
     Hence, GENIAL INGELE is not liable for any inaccuracies found in this code. We are trying to guide you in making a decision in the best way we can, 
